--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,12 +27,18 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  build_runner: ^2.3.3
   cached_network_image: ^3.2.3
   carousel_slider: ^4.2.1
   cupertino_icons: ^1.0.2
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.2
   font_awesome_flutter: ^10.4.0
+  http: ^0.13.5
+  json_annotation: ^4.8.0
+  json_serializable: ^6.6.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
