--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_bloc: ^8.1.2
   font_awesome_flutter: ^10.4.0
   http: ^0.13.5
+  intl: ^0.18.0
   json_annotation: ^4.7.0
   json_serializable: ^6.5.3
 
